fixed JSP source exploit